<resources>
    <string name="app_name">PawPals</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="background">Background</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="username">Username</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="pet_picture">Pet picture</string>
    <string name="user_profile_image">User profile image</string>
</resources>