<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LaunchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_secondary"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="400dp"
        android:background="@drawable/two_rounded_corners_shape"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/four_rounded_corners_shape"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBackground"
        app:layout_constraintVertical_bias="0.33" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/four_rounded_corners_shape"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0" />


</androidx.constraintlayout.widget.ConstraintLayout>